--- a/plugins/PluginCallbacks/config.yaml
+++ b/plugins/PluginCallbacks/config.yaml
@@ -9,5 +9,5 @@ blog_config_template: config.tmpl
 
 callbacks:
     init_app: $PluginCallbacks::PluginCallbacks::Plugin::init_app
-    PluginCallbacks::Plugin::pc_pre_save_config: $PluginCallbacks::PluginCallbacks::Plugin::pre_save_config
-    PluginCallbacks::Plugin::pc_post_save_config: $PluginCallbacks::PluginCallbacks::Plugin::post_save_config
+    PluginCallbacks::Plugin::pc_pre_save: $PluginCallbacks::PluginCallbacks::Plugin::pre_save
+    PluginCallbacks::Plugin::pc_post_save: $PluginCallbacks::PluginCallbacks::Plugin::post_save
