The purpose of this plugin has changed from adding callbacks to MT::Plugin, to demonstrating the process of adding callbacks to any part of the MT core.

--- a/plugins/PluginCallbacks/config.yaml
+++ b/plugins/PluginCallbacks/config.yaml
@@ -1,11 +1,10 @@
 id: PluginCallbacks
 name: Plugin Callbacks
-description: Movable Type exposes a number of different callbacks that developers can hook their code to. Missing, however, are callbacks triggered by events occurring to plugins themselves. This plugin adds those callbacks..
-version: 0.03
+description: A plugin demonstrating how to add custom callbacks to the MT core.
+version: 0.04
 author_name: Michael De Soto
 author_link: http://www.quarg.com/
 plugin_link: http://www.quarg.com/
-blog_config_template: config.tmpl
 
 callbacks:
     init_app: $PluginCallbacks::PluginCallbacks::Plugin::init_app
